--- a/package.json
+++ b/package.json
@@ -1,12 +1,19 @@
 {
   "name": "api-expect",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "A simple input validation system designed for apis or form inputs. Supports custom validators and actually readable outputs.",
   "main": "index.js",
   "repository": "git@gitlab.com:powerofm/api-expect.git",
   "author": "Mesbah Mowlavi <m@ionx.ca>",
-  "license": "",
+  "license": "MIT",
+  "scripts": {
+    "test": "NODE_ENV=test mocha ./tests/**/*.js"
+  },
   "dependencies": {
     "xss": "^0.3.3"
+  },
+  "devDependencies": {
+    "chai": "^4.0.2",
+    "mocha": "^3.4.2"
   }
 }
