--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "api-expect",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "description": "A simple input validation system designed for apis or form inputs. Supports custom validators and actually readable outputs.",
   "main": "index.js",
-  "repository": "git@gitlab.com:powerofm/api-expect.git",
+  "repository": "https://gitlab.com/powerofm/api-expect",
   "author": "Mesbah Mowlavi <m@ionx.ca>",
   "license": "MIT",
   "scripts": {
