--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "api-expect",
-  "version": "1.1.25",
+  "version": "1.1.26",
   "description": "A simple input validation system designed for apis or form inputs. Supports custom validators and actually readable outputs.",
   "main": "index.js",
   "repository": "https://github.com/powerofm/api-expect",
@@ -10,7 +10,7 @@
     "test": "NODE_ENV=test mocha ./tests/**/*.js"
   },
   "dependencies": {
-    "xss": "^0.3.3"
+    "sanitize-html": "^1.14.1"
   },
   "devDependencies": {
     "chai": "^4.0.2",
